--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,9 @@ html(lang='sv')
             a {
                 color: #0055b1
             }
+            td {
+                font-size: small;
+            }
     body
         block content
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
